--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Join": {
+    "join": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
