--- a/angular.json
+++ b/angular.json
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "Join:build:production"
+              "buildTarget": "join:build:production"
             },
             "development": {
-              "buildTarget": "Join:build:development"
+              "buildTarget": "join:build:development"
             }
           },
           "defaultConfiguration": "development"
